# agent-actions

./: .changie.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  Taskfile.yml  pyproject.toml  pytest.ini  simulate_record_state_machine.py
.changes/: 0.1.12.md
.changes/unreleased/: Breaking Change-20260423-085000.yaml  Breaking Change-20260423-086000.yaml  Breaking Change-20260423-087000.yaml  Breaking Change-20260423-088000.yaml  Breaking Change-20260424-091000.yaml  Bug Fix-20260402-063000.yaml  Bug Fix-20260414-113000.yaml  Bug Fix-20260416-173600.yaml  Bug Fix-20260416-183000.yaml  Bug Fix-20260418-120000.yaml  Bug Fix-20260418-130000.yaml  Bug Fix-20260418-132517.yaml  Bug Fix-20260418-150000.yaml  Bug Fix-20260419-060000.yaml  Bug Fix-20260419-073200.yaml  Bug Fix-20260419-100000.yaml  Bug Fix-20260419-120000.yaml  Bug Fix-20260419-130000.yaml  Bug Fix-20260419-140000.yaml  Bug Fix-20260420-061000.yaml  Bug Fix-20260420-063000.yaml  Bug Fix-20260420-065000.yaml  Bug Fix-20260421-067000.yaml  Bug Fix-20260421-067001.yaml  Bug Fix-20260421-068000.yaml  Bug Fix-20260422-001000.yaml  Bug Fix-20260422-007000.yaml  Bug Fix-20260422-074000.yaml  Bug Fix-20260422-075000.yaml  Bug Fix-20260422-076000.yaml  Bug Fix-20260422-077000.yaml  Bug Fix-20260422-078000.yaml  Bug Fix-20260423-079000.yaml  Bug Fix-20260423-080000.yaml  Bug Fix-20260423-081000.yaml  Bug Fix-20260423-082000.yaml  Bug Fix-20260423-084000.yaml  Bug Fix-20260424-029000.yaml  Bug Fix-20260424-093000.yaml  Bug Fix-20260424-095000.yaml  (+98 more)
.changes/v0.1.11/: Bug Fix-20260401-191900.yaml  Bug Fix-20260413-090000.yaml  Enhancement or New Feature-20260327-081325.yaml  Enhancement or New Feature-20260327-143000.yaml  Enhancement or New Feature-20260413-080000.yaml  Enhancement or New Feature-20260413-160000.yaml  Enhancement or New Feature-20260413-170000.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  cla.yml  docs-deploy.yml  publish.yml
agent_actions/: _MANIFEST.md  __init__.py  __version__.py
agent_actions/cli/: _MANIFEST.md  clean.py  cli_decorators.py  compile.py  docs.py  init.py  inspect.py  inspect_action.py  inspect_base.py  inspect_deps.py  inspect_graph.py  list_udfs.py  main.py  preview.py  run.py  schema.py  skills.py  status.py
agent_actions/config/: _MANIFEST.md  __init__.py  defaults.py  environment.py  factory.py  init.py  interfaces.py  manager.py  path_config.py  paths.py  project_paths.py  schema.py  types.py
agent_actions/errors/: _MANIFEST.md  __init__.py  base.py  common.py  configuration.py  external_services.py  filesystem.py  operations.py  preflight.py  processing.py  resources.py  validation.py
agent_actions/guards/: _MANIFEST.md  __init__.py  consolidated_guard.py  guard_parser.py
agent_actions/input/: _MANIFEST.md
agent_actions/llm/: _MANIFEST.md
agent_actions/logging/: _MANIFEST.md  __init__.py  config.py  factory.py  filters.py  formatters.py
agent_actions/models/: _MANIFEST.md  __init__.py  action_schema.py
agent_actions/output/: _MANIFEST.md  __init__.py  saver.py  writer.py
agent_actions/processing/: _MANIFEST.md  __init__.py  batch_context_adapter.py  batch_processor.py  enrichment.py  error_handling.py  exhausted_builder.py  helpers.py  prepared_task.py  processor.py  record_helpers.py  record_processor.py  result_collector.py  task_preparer.py  types.py  unified.py
agent_actions/prompt/: _MANIFEST.md  data_generator.py  formatter.py  handler.py  message_builder.py  prompt_utils.py  render_workflow.py  renderer.py  service.py
agent_actions/record/: _MANIFEST.md  __init__.py  envelope.py  state.py  tracking.py
agent_actions/skills/: _MANIFEST.md
agent_actions/storage/: _MANIFEST.md  __init__.py  backend.py
agent_actions/tooling/: _MANIFEST.md  code_scanner.py
agent_actions/utils/: _MANIFEST.md  __init__.py  atomic_write.py  constants.py  content.py  dict.py  error_handler.py  error_wrap.py  file_handler.py  file_utils.py  graph_utils.py  json_safety.py  module_loader.py  passthrough_builder.py  path_security.py  path_utils.py  project_root.py  safe_format.py  schema_utils.py  tools_resolver.py
agent_actions/validation/: _MANIFEST.md  __init__.py  base_validator.py  batch_validator.py  clean_validator.py  config_validator.py  init_validator.py  path_validator.py  project_validator.py  prompt_ast.py  prompt_validator.py  render_validator.py  run_validator.py  schema_output_validator.py  schema_validator.py  status_validator.py  (+1 more)
docs/: launch-video-script.md
docs.agent-actions/: WHITEPAPER.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  style_guide.md
examples/: README.md
tasks/: lessons.md  todo.md
tests/: conftest.py
vscode-extension/: LICENSE  README.md  agent-actions-0.1.19.vsix  esbuild.js  package-lock.json  package.json
(+1306 files in other folders)
