[project]
name = "agent-actions"
version = "0.1.0"
description = "Declarative YAML-based framework for orchestrating LLM workflows with batch processing"
authors = [
    {name = "Muizz Kolapo"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["llm", "ai", "workflow", "yaml", "openai", "anthropic", "batch-processing", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiofiles>=24.0.0,<26",
    "openai>=1.26.0,<3",
    "tiktoken>=0.9.0,<1",
    "flask>=3.0.3,<4",
    "flask-cors>=4.0.1,<5",
    "networkx>=3.3,<4",
    "pypdf>=4.0.0,<7",
    "python-docx>=1.1.2,<2",
    "pandas>=2.2.2,<4",
    "openpyxl>=3.1.2,<4",
    "beautifulsoup4>=4.12.3,<5",
    "defusedxml>=0.7.1,<1",
    "google-api-python-client>=2.130.0,<3",
    "google-genai>=1.0.0,<2",
    "anthropic>=0.30.0,<2",
    "pyparsing>=3.1.1,<4",
    "sentence-transformers>=2.2.2,<4",
    "numpy>=1.26.4,<3",
    "jsonschema>=4.23.0,<5",
    "pydantic>=2.8.0,<3",
    "pydantic-settings>=2.4.0,<3",
    "python-dotenv>=1.0.1,<2",
    "ollama>=0.1.0,<1",
    "mistralai>=0.1.0,<2",
    "cohere>=5.0.0,<6",
    "groq>=0.1.0,<2",
    "rich>=13.0.0,<15",
    "pyyaml>=6.0.0,<7",
    "jinja2>=3.1.0,<4",
    "portalocker>=2.8.2,<3",
    # LSP dependencies
    "pygls>=2.0.0,<3",
    "lsprotocol>=2024.0.0,<2026",
    "ruamel.yaml>=0.18.0,<1",
]

[project.urls]
Homepage = "https://github.com/Muizzkolapo/agent-actions"
Documentation = "https://docs.runagac.com"
Repository = "https://github.com/Muizzkolapo/agent-actions"
Issues = "https://github.com/Muizzkolapo/agent-actions/issues"

[project.scripts]
agac = "agent_actions.cli.main:main"
agac-lsp = "agent_actions.tooling.lsp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9",
    "pytest-cov>=4.1.0,<7",
    "mypy>=1.8.0,<2",
    "types-PyYAML>=6.0.12,<7",
    "pandas-stubs>=2.0.3,<3",
    "types-requests>=2.31.0,<3",
    "types-beautifulsoup4>=4.12.0,<5",
    "ipython>=8.0.0,<9",
    "ipdb>=0.13.0,<1",
]
nlp = [
    "spacy>=3.0.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_actions"]

[tool.hatch.build.targets.wheel.force-include]
"agent_actions/tooling/docs/docs_site" = "agent_actions/tooling/docs/docs_site"
"agent_actions/skills" = "agent_actions/skills"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0,<9",
    "pytest-cov>=4.1.0,<7",
    "mypy>=1.8.0,<2",
    "types-PyYAML>=6.0.12,<7",
    "pandas-stubs>=2.0.3,<3",
    "types-requests>=2.31.0,<3",
    "types-beautifulsoup4>=4.12.0,<5",
    "ipython>=8.0.0,<9",
    "ipdb>=0.13.0,<1",
    "hypothesis>=6.139.2,<7",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-mock>=3.15.1,<4",
    "pytest-benchmark>=5.1.0,<6",
    "pytest-xdist>=3.8.0,<4",
    "ruff>=0.8.0,<1",
    "pre-commit>=3.6.0,<4",
    "vulture>=2.11,<3",
]

[tool.mypy]
python_version = "3.11"
exclude = ["^examples/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
incremental = true
namespace_packages = true

# Gradual adoption - start with errors only
[[tool.mypy.overrides]]
module = "agent_actions.*"
ignore_errors = false
warn_unused_ignores = false

# External library stubs
[[tool.mypy.overrides]]
module = [
    "tiktoken.*",
    "sentence_transformers.*",
    "google.genai.*",
    "openai.*",
    "anthropic.*",
    "pypdf.*",
    "docx.*",
    "networkx.*",
    "agent_actions.llm.batch.*"
]
ignore_missing_imports = true

# Vendor modules - ignore complex API typing for now
[[tool.mypy.overrides]]
module = "agent_actions.vendors.*"
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "B",    # bugbear
    "UP",   # pyupgrade
    "LOG",  # flake8-logging rules
    "G",    # flake8-logging-format rules
    "T20",  # flake8-print (bans bare print())
]
ignore = [
    "G004",  # Allow f-strings in logging (project standard)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["LOG", "G", "T201"]
"agent_actions/skills/agent-actions-workflow/scripts/*" = ["T201"]
"agent_actions/logging/core/handlers/*" = ["T201"]
".claude/*" = ["T201"]
"examples/*" = ["T201"]
